--- a/cropguard/index.html
+++ b/cropguard/index.html
@@ -144,11 +144,11 @@
                     <form ng-submit="vm.login()">
                         <div class="form-group">
                             <label class="form-label">Email Address</label>
-                            <input type="email" 
-                                   class="form-input" 
-                                   placeholder="Enter your email"
-                                   ng-model="vm.email"
-                                   required>
+                            <input type="text"
+                            class="form-input"
+                            placeholder="Enter User ID (e.g. FARMER_001)"
+                            ng-model="vm.email">
+                     
                         </div>
 
                         <div class="form-group">
